Clean up Requirements and Dockerfile

--- a/gpt/Dockerfile
+++ b/gpt/Dockerfile
@@ -6,12 +6,14 @@ RUN apt-get update \
 && apt-get purge -y --auto-remove \
 && rm -rf /var/lib/apt/lists/*
 
-RUN dpkg -r --force-all libdb5.3
-RUN dpkg -r --force-all libdb5.3-dev
-
 # Add the needed files      
 WORKDIR /gpt
 ENV PROJECT_DIR=/gpt
+
+# Create group and user called app 
+RUN groupadd -r gpt -g 1000 \
+ && useradd -u 1000 -r -g gpt -s /sbin/nologin -c "gpt user" gpt \
+ && chown gpt:gpt /home --recursive 
 
 # Install requirements for the User
 COPY requirements.txt requirements.txt
@@ -21,15 +23,7 @@ RUN pip install -r requirements.txt
 # Remove requirements.txt to clean environment 
 RUN rm -rf requirements.txt 
 
-COPY src/ ${PROJECT_DIR}/src/
-#COPY src/__init__.py ${PROJECT_DIR}/src/__init__.py
-
-# Create group and user called app 
-RUN groupadd -r gpt -g 1000 \
- && useradd -u 1000 -r -g gpt -s /sbin/nologin -c "gpt user" gpt \
- && chown gpt:gpt /gpt --recursive 
-
-RUN chown -R gpt:gpt /home
+COPY --chown=gpt src/ ${PROJECT_DIR}/src/
 
 # Expose ports
 EXPOSE 7000
